--- a/src/Planner.css
+++ b/src/Planner.css
@@ -130,6 +130,7 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
+        gap: 0.4em;
     }
     
     .Planner .footer-buttons .eatstash-button {
